feat: Implement services for managing favorites, ingredients, instructions, personal notes, recipes, reviews, tags, and units
- Added FavoriteService for managing user favorite recipes.
- Enhanced IngredientService with authorization checks for adding, updating, and deleting ingredients.
- Introduced InstructionService for managing recipe instructions with authorization.
- Created PersonalNoteService for handling user notes on recipes.
- Refactored RecipeService to improve recipe management and added tag handling.
- Added ReviewService for managing user reviews on recipes.
- Implemented TagService for creating, updating, and deleting tags with duplicate checks.
- Enhanced UnitService for managing measurement units with validation.
- Added unit tests for RecipeController to ensure proper functionality.